// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterMenu rendering renders expected elements 1`] = `
<React.Fragment>
  <IconMenu
    aria-label="Add filter"
    arrow={true}
    className="FilterMenu"
    disabled={false}
    icon={[Function]}
    id="filterButton"
    tooltipPlacement="top"
    tooltipText="Add filter"
  >
    <MenuItem
      data-key="a"
      onClick={[Function]}
      type="default"
    />
    <MenuItem
      data-key="b"
      onClick={[Function]}
      type="default"
    />
  </IconMenu>
</React.Fragment>
`;

exports[`FilterMenu rendering renders expected elements when filter is set 1`] = `
<React.Fragment>
  <IconMenu
    aria-label="Add filter"
    arrow={true}
    className="FilterMenu FilterMenu--active"
    disabled={false}
    icon={[Function]}
    id="filterButton"
    tooltipPlacement="top"
    tooltipText="Add filter"
  >
    <MenuItem
      data-key="a"
      onClick={[Function]}
      type="default"
    />
    <MenuItem
      data-key="b"
      onClick={[Function]}
      type="default"
    />
  </IconMenu>
  <React.Portal>
    <FilterEditor
      buttonId="filterButton"
      getEditor={[MockFunction]}
      getLabel={
        [MockFunction] {
          "calls": [
            [
              "a",
            ],
            [
              "b",
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      name="value"
      onClose={[Function]}
      onSave={[Function]}
    />
  </React.Portal>
</React.Fragment>
`;

exports[`FilterMenu rendering renders expected elements when filters is set 1`] = `
<React.Fragment>
  <IconMenu
    aria-label="Add filter"
    arrow={true}
    className="FilterMenu"
    disabled={false}
    icon={[Function]}
    id="filterButton"
    tooltipPlacement="top"
    tooltipText="Add filter"
  >
    <MenuItem
      data-key="a"
      onClick={[Function]}
      type="default"
    />
    <MenuItem
      data-key="b"
      onClick={[Function]}
      type="default"
    />
  </IconMenu>
</React.Fragment>
`;
